# iab_toolkit

./: .gitignore  CLEANUP_COMPLETE.md  COMPLETION_SUMMARY.md  Content Taxonomy 3.1.tsv  ENHANCED_SYSTEM_COMPLETE.md  FEATURES.md  HYBRID_CLASSIFICATION_COMPLETE.md  JSON_OUTPUT_COMPLETE.md  README.md  REQUIREMENTS_COMPLETE.md  SIMPLIFIED_SYSTEM_COMPLETE.md  TEXT_CLASSIFICATION_COMPLETE.md  TEXT_CLASSIFICATION_GUIDE.md  clean_tier1_taxonomy.py  cleanup_project.py  comprehensive_test.py  demo_results.csv  demo_results.json  demonstrate_process.py  enhanced_hybrid_classifier_v2.py  individual_test_result.json  japanese_health_sample.txt  japanese_text_sample.txt  pyproject.toml  regenerate_embeddings.py  remove_old_embeddings.py  results.csv  sample_json_structure.json  sample_urls.txt  show_taxonomy_subset.py  simplified_classification_results_20250524_004846.json  test_enhanced_system.py  test_individual_json.py  test_japanese.py  test_japanese_comprehensive.py  test_japanese_samples.py  test_results.json  test_simplified_system.py  test_simplified_with_json.py  test_taxonomy_fix.py  (+1 more)
backup_removed_files/: COMPLETION_SUMMARY.md  ENHANCED_SYSTEM_COMPLETE.md  REQUIREMENTS_COMPLETE.md  cli.py  demo_hybrid_improvement.py  enhanced_hybrid_classifier.py  final_demonstration.py  hybrid_classifier.py  hybrid_classifier_v2.py  quick_test.py  results.json  simple_build_vectors.py  simplified_classification_results_20250524_004239.json  simplified_classification_results_20250524_004652.json  test_compact_formats.py  test_edge_cases.py  test_script.py
examples/: demo.py
final/: JAPANESE_SYSTEM_TEST_RESULTS.md  optimized_tier1_detector.py  test_full_system.py  test_japanese_beauty_fixed.py  test_japanese_samples.py  test_npy_embeddings.py
iab_toolkit/: README.md  __init__.py  _batch.py  _embedding.py  _extract.py  _fetch.py  _gpt.py  classify.py  cli.py  cli_new.py  cli_old.py  hybrid_iab_classifier.py  japanese_text_analysis_client_report_20250525_213053.txt  japanese_text_analysis_client_report_20250525_214150.txt  models.py  optimized_tier1_detector.py  test_japanese_samples.py  test_japanese_samples_client_report.py
iab_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+23 files in other folders)
